<resources>
    <string name="app_name">Uzkanova_v_05</string>
    <string name="face">TODO</string>
    <string name="hello">Добро пожаловать!</string>
    <string name="fff">.</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn1">1</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btnX">X</string>
    <string name="btn0">0</string>
    <string name="btnokkks">ok</string>
    <string name="ffffsa">TODO</string>
    <string name="textview">TextView</string>
    <string name="statsus">Здесь должен быть какой-нибудь статус, но я его не придумал!</string>
    <string name="imgsaf">TODO</string>
    <string name="fsads">Новый пост</string>
    <string name="posts">Новый пост</string>
    <string name="newpost">Новый пост</string>
    <string name="has">TODO</string>
    <string name="news">Новости</string>
    <string name="chats">Чаты</string>
    <string name="myposts">Мои посты</string>
</resources>