<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3E3E3"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="65dp"
        android:layout_height="66dp"
        android:background="#F95959"
        android:text="@string/btn2"
        android:textColor="#2E2D2D"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.515" />

    <Button
        android:id="@+id/button3"
        android:layout_width="65dp"
        android:layout_height="66dp"
        android:background="#F95959"
        android:text="@string/btn3"
        android:textColor="#2E2D2D"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.878"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.515" />

    <Button
        android:id="@+id/button4"
        android:layout_width="65dp"
        android:layout_height="66dp"
        android:background="#F95959"
        android:text="@string/btn4"
        android:textColor="#2E2D2D"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666" />

    <Button
        android:id="@+id/button5"
        android:layout_width="65dp"
        android:layout_height="66dp"
        android:background="#F95959"
        android:text="@string/btn5"
        android:textColor="#2E2D2D"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666" />

    <Button
        android:id="@+id/button6"
        android:layout_width="65dp"
        android:layout_height="66dp"
        android:background="#F95959"
        android:text="@string/btn6"
        android:textColor="#2E2D2D"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666" />

    <Button
        android:id="@+id/button7"
        android:layout_width="65dp"
        android:layout_height="66dp"
        android:background="#F95959"
        android:text="@string/btn7"
        android:textColor="#2E2D2D"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.809" />

    <Button
        android:id="@+id/button8"
        android:layout_width="65dp"
        android:layout_height="66dp"
        android:background="#F95959"
        android:text="@string/btn8"
        android:textColor="#2E2D2D"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.809" />

    <Button
        android:id="@+id/button9"
        android:layout_width="65dp"
        android:layout_height="66dp"
        android:background="#F95959"
        android:text="@string/btn9"
        android:textColor="#2E2D2D"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.809" />

    <Button
        android:id="@+id/button10"
        android:layout_width="65dp"
        android:layout_height="66dp"
        android:background="#FFC69D"
        android:text="@string/btnX"
        android:textColor="#2E2D2D"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.947" />

    <Button
        android:id="@+id/button11"
        android:layout_width="65dp"
        android:layout_height="66dp"
        android:background="#F95959"
        android:text="@string/btn0"
        android:textColor="#2E2D2D"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.947" />

    <Button
        android:id="@+id/btnOk"
        android:layout_width="65dp"
        android:layout_height="66dp"
        android:background="#FFC69D"
        android:onClick="onClick"
        android:text="@string/btnokkks"
        android:textColor="#2E2D2D"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.947" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="66dp"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/fff"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#2E2D2D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="66dp"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/fff"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#2E2D2D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.605"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="66dp"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/fff"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#2E2D2D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.878"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/face"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026"
        app:srcCompat="@drawable/face" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="259dp"
        android:layout_height="101dp"
        android:text="@string/hello"
        android:textColor="#233142"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.257" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="66dp"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/fff"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#2E2D2D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="65dp"
        android:layout_height="66dp"
        android:background="#F95959"
        android:text="@string/btn1"
        android:textColor="#2E2D2D"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.515" />
</androidx.constraintlayout.widget.ConstraintLayout>